<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Alarm+</string>
	<string name="version">\t v1.1.1</string>
	<string name="app_description">Alarm+ for Android by Humanoid Group</string>
    <string name="email">E-mail: humanoid.group@gmail.com</string>
    <string name="website">Home : coming soon~</string>
    <string name="contact">Contect: coming soon~</string>
	<string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="no_connection">No Internet connection!</string>
    <string name="add_alarm">Add alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Enable alarm</string>
    <string name="disable_alarm">Disable alarm</string>
    <string name="delete_alarm_confirm">This alarm will be deleted.</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="recording">Recording</string>
    <string name="info" >"Infomation"</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
        <string name="effect">Alarm Effect</string>
    <string name="alert">Sound</string>
    <string name="time">Time</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_alert_silenced">Alarm silenced after <xliff:g id="minutes">%d</xliff:g> minutes</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <string name="day">"1 day"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>
    <string name="hour">1 hour</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>
    <string name="minute">"1 minute"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="every_day">every day</string>
    <string name="never">Never</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Select a clock to display.</string>
    <string name="analog_gadget">Alarm+ clock</string>
    <string name="settings">Settings</string>
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <string name="snooze_duration_title">Snooze duration</string>
    <string-array name="snooze_duration_entries">
      <item>5 minutes</item>
      <item>10 minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      <item>30 minutes</item>
    </string-array>
    <string-array name="snooze_duration_values">
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>30</item>
    </string-array>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_volume_summary">Set the volume of alarms</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Select to snooze or dismiss this alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel.</string>
    <string name="volume_button_setting_title">Side button behavior</string>
    <string name="volume_button_setting_summary">Set the desired behavior of the side buttons when pressed during an alarm</string>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string-array name="volume_button_setting_entries">
      <item>None</item>
      <item>Snooze</item>
      <item>Dismiss</item>
    </string-array>
    <string-array name="volume_button_setting_values">
      <item>0</item>
      <item>1</item>
      <item>2</item>
    </string-array>
    <string-array name="days_of_week">
        
        <item>Monday</item>
        
        <item>Tuesday</item>
        
        <item>Wednesday</item>
        
        <item>Thursday</item>
        
        <item>Friday</item>
        
        <item>Saturday</item>
        
        <item>Sunday</item>
    </string-array>
    <string-array name="days_of_week_short">
        
        <item>Mon</item>
        
        <item>Tue</item>
        
        <item>Wed</item>
        
        <item>Thu</item>
        
        <item>Fri</item>
        
        <item>Sat</item>
        
        <item>Sun</item>
    </string-array>
    <string-array name="sound_choice">
        <item>Default</item>
        <item>Weather Sound</item>
        <item>TTS(Text-To-Speech)</item>
    </string-array>
    <string name="chronometer_initial_format">Rec Time: <xliff:g id="initial-format">%s</xliff:g></string>
    <string name="chronometer_initial_format2">Play Time: <xliff:g id="initial-format">%s</xliff:g></string>
    <string name="gpscheck">"Your Network or GPS is disabled! Would you like to enable it?"</string>
    <string name="gpscheckbtn1">Enable GPS</string>
    <string name="gpscheckbtn2">Do nothing</string>
    <string-array name="alarm_effect_lists">
    	
        <item>Default</item>
        
        <item>Weather Effect</item>
        
        <item>Voice Effect</item>
        
        <item>TTS(Text-To-Speech)</item>
    </string-array>
    <string-array name="alarm_effect_values">
    	
        <item>00</item>
        
        <item>01</item>
        
        <item>02</item>
        
        <item>03</item>
    </string-array>
    <string name="alarm_tts_title">Voice 알람 설정</string>
    <string name="alarm_tts_summary">Voice 알람 설정 상태</string>
    <string name="alarm_tts_check_title">Voice 알람 설정</string>
    <string name="alarm_tts_check_summary">Voice 알람 설정 상태</string>
    <string name="alarm_tts_message_title">메세지</string>
    <string name="alarm_tts_message_summary">It\'s %t. The current temperature takes a value of %c degrees. During the day, it will reach a value of %max degrees.</string>
    <string name="alarm_tts_dialog_message">Voice 메세지를 입력해 주세요.(%t 시간,%c 최저온도,%max 최고온도</string>
    <string name="alarm_tts_voicetest_title">Voice 알람 테스트</string>
    <string name="alarm_tts_voicetest_summary">현재 설정된 알람 메세지 테스트</string>
    <string name="alarm_tts_noti_message">Please enter must be in English.</string>
    <string name="alarm_tts_btn_speak">Listen</string>
    <string name="alarm_tts_btn_save">Save</string>
    <string name="alarm_tts_btn_close">Closed</string>
    <string name="alarm_rec_btn_start">Start</string>
    <string name="alarm_rec_btn_stop">Stop</string>
    <string name="alarm_rec_btn_listen">Listen</string>
    <string name="alarm_rec_btn_close">Closed</string>
        <string-array name="alarm_tts_sample_message_values">
        <item>Input</item>
        <item>Good morning</item>
        <item>Wake up</item>
        <item>It\'s time to get up.</item>
        <item>I can take my time when I get up early.</item>
        <item>I will be an early bird.</item>
        <item>The early bird catches the worm.</item>
    </string-array>
    <string name="alarm_weather_none1">Please check your network</string>
    <string name="alarm_weather_none2">connection(3G/Wi-Fi) and GPS</string>
</resources>