<?xml version="1.0" encoding="utf-8"?>
	<!-- 이 파일은 /res/layout/main.xml이다. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>

	<TextView android:text="@string/alarm_tts_noti_message"
		android:id="@+id/alarm_tts_noti_message" android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
		android:textStyle="bold"/>
	<EditText android:id="@+id/wordsToSpeak" android:hint="Voice Alarm Messages..."
		android:layout_width="fill_parent" android:singleLine="false" android:layout_height="180dp"/>

	<LinearLayout android:id="@+id/LinearLayout01"
		android:orientation="horizontal" android:layout_width="fill_parent"
		style="@android:style/ButtonBar" android:layout_height="wrap_content"
		android:gravity="center_vertical|center_horizontal"
	>
		<Button android:id="@+id/speak" android:text="@string/alarm_tts_btn_speak"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:id="@+id/save" android:text="@string/alarm_tts_btn_save"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:enabled="false" />
		<Button android:id="@+id/close" android:text="@string/alarm_tts_btn_close"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:enabled="true" />
	</LinearLayout>


</LinearLayout>